--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>kompletny katalog</title>
-<meta content='https://i.postimg.cc/sDVgHQYS/Screenshot-847.png' property='og:image'/>
+<title>Prywatne usługi</title>
+<meta content='https://i.postimg.cc/W30hcCzc/sdf.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-<title>catálogo completo</title>
+<title>Photo Gallery</title>
 <div class="layer">
-</div>
-
+</div
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
@@ -68,20 +67,18 @@
             <img src="https://cdn.jmp-assets.com/assets/195/images/1.gif" alt="image">
           </span>
           <h1>
-           SOMOS DAMAS DE COMPAÑIA PRESIONA ENTRAR ABAJO Y REGISTRATE EN NUESTRO SITIO PRIVADO PARA PODER VERNOS DESNUDAS EN VIVO                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
+               ¡OSTRZEŻENIE! Czy zgadzasz się szanować nagie kobiety, które zobaczysz poniżej? Jeśli kogoś znasz, nie mów mu i nie rozpowszechniaj plotek.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
           </h1>
           <p>
-            <b>
-              ESTE SITIO WEB ES GRATUITO                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+            <b                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       
             </b>
-            <br>
-          PUEDES ELEGIR CUALQUIER CHICA Y FOOLAR CON ELLA, REGISTRATE EN LA SIGUIENTE PAGINA                              
+            <br                             
           </p>
         </header>
         <footer>
-          <a href="https://shrlc.com/X8ZWGvN">
+          <a href="https://shrlc.com/ydBD5v-">
             <button type="submit" class="btn btn-danger btn-lg stylee">
-              ENTRAR.                                    
+             SOUHLASÍM                             
             </button>
           </a>
         </footer>
